--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "lucide-react": "^0.344.0",
     "xlsx": "^0.18.5",
     "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
-    "@google/genai": "^0.1.0"
+    "jspdf-autotable": "^3.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -25,6 +24,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
-    "vite": "^5.1.5"
+    "vite": "^5.1.5",
+    "vite-plugin-pwa": "^0.19.2"
   }
 }
